solving issue of hiding carousel caption on small screen by adding block propert to block from none

--- a/src/styles/base/components/slider.scss
+++ b/src/styles/base/components/slider.scss
@@ -17,3 +17,6 @@
 #carouselExampleIndicators{
     margin-top: 5%;
 }
+.d-none {
+    display: block !important;
+}
